--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.2",
+    "bcryptjs": "^3.0.3",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -24,6 +28,10 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "next-auth": "^4.x",
+    "@next-auth/prisma-adapter": "^1.x",
+    "@prisma/client": "^5.x",
+    "bcryptjs": "^2.x"
   }
 }
