--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
@@ -20,18 +19,18 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@next-auth/prisma-adapter": "^1.x",
+    "@prisma/client": "^6.19.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "bcryptjs": "^2.x",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5",
     "next-auth": "^4.x",
-    "@next-auth/prisma-adapter": "^1.x",
-    "@prisma/client": "^5.x",
-    "bcryptjs": "^2.x"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
